<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_295dp"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile_left_chat"
        android:layout_width="@dimen/_60dp"
        android:layout_height="@dimen/_60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_text_message_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_left"
        android:text="@string/text_username"
        app:layout_constraintBottom_toBottomOf="@+id/iv_profile_left_chat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toEndOf="@+id/iv_profile_left_chat"
        app:layout_constraintTop_toTopOf="@+id/iv_profile_left_chat"
        app:layout_constraintVertical_bias="0.512" />

    <ImageView
        android:id="@+id/iv_left_message"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/content_description"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/tv_last_seen_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_send"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>