<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wrl_activity">

    <ImageView
        android:id="@+id/iv_register_mobile"
        android:layout_width="320dp"
        android:layout_height="350dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_create_your"
        app:srcCompat="@drawable/mobile" />

    <ImageView
        android:id="@+id/iv_register_chat"
        android:layout_width="192dp"
        android:layout_height="202dp"
        android:layout_marginTop="104dp"
        android:contentDescription="@string/content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_create_your"
        app:srcCompat="@drawable/chat" />

    <TextView
        android:id="@+id/tv_register_hello"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginTop="50dp"
        android:text="@string/hello_"
        android:textAlignment="center"
        android:textAppearance="@style/welcome_hello"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_register_create_your"
        android:layout_width="300dp"
        android:layout_height="27dp"
        android:text="@string/text_create_your_account_here"
        android:textAlignment="center"
        android:textAppearance="@style/register_create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_hello" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_login"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:cardBackgroundColor="@color/colorPrimaryLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/register">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="258dp"
                android:layout_height="49dp"
                android:layout_marginTop="16dp"
                android:alpha="0.3"
                android:background="@drawable/edt_register_login"
                android:elevation="4dp"
                android:ems="10"
                android:hint="@string/text_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textAppearance="@style/login"
                android:textColorHint="@color/colorHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_email" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="258dp"
                android:layout_height="49dp"
                android:layout_marginTop="16dp"
                android:alpha="0.3"
                android:background="@drawable/edt_register_login"
                android:elevation="4dp"
                android:ems="10"
                android:hint="@string/text_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textAppearance="@style/login"
                android:textColorHint="@color/colorHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_username" />

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="258dp"
                android:layout_height="49dp"
                android:layout_marginTop="32dp"
                android:alpha="0.3"
                android:background="@drawable/edt_register_login"
                android:elevation="4dp"
                android:textAppearance="@style/login"
                android:ems="10"
                android:hint="@string/text_username"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColorHint="@color/colorHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="180dp"
                android:layout_height="45dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/btn_register_login"
                android:text="@string/text_register"
                android:textAppearance="@style/login"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>